2004-06-18  Robin Ericsson  <lobbin@localhost.nu>

	* src/mud-preferences-window.c [_MudPreferencesWindowPrivate]:
	Added a few new member.
	(mud_preferenes_window_init): Map some more widgets.
	Renamed a few functions more correctly.
	(mud_preferences_window_set_preferences): Added.

	* ui/main.glade: Added all preference-widgets.

2004-06-17  Robin Ericsson  <lobbin@localhost.nu>

	* src/Makefile.am: Added gconf-helper.[ch].

	* src/mud-preferences-window.c (mud_preferences_window_init):
	Connected to response signal.
	(mud_preferences_window_fill_profiles): Added global preferences.
	(mud_preferences_response_cb): Added.

	* src/mud-preferences.c (mud_preferences_finalize): Free values
	from properties.
	(mud_preferenes_new): Load preferences.

	* src/mud-preferences.h [_MudPreferences]: Added preferences
	member.

	* src/mud-profile.h [_MudPrefs]: Added.
	[_MudProfile]: Added preferences member.

	* ui/main.glade [preferences-window]: Changed responsetype of 
	button to GTK_RESPONSE_CLOSE.

2004-06-16  Robin Ericsson  <lobbin@localhost.nu>

	* src/mud-preferences-window.c [MudPreferencesWindowPrivate]:
	Added notebook.
	[enums]: Added.
	(mud_preferences_tree_selection_cb): Added.
	(mud_preferences_show_tab): Added.
	(mud_preferences_window_fill_profiles): Added 3:d field to
	TreeView. Also show preferences child and attack selected
	callback.

	* src/mud-preferences.[ch]: Changed mud_preferences_get_profiles()
	into const.

	* ui/main.glade: Renamde notebook2 to notebook. Changed size of
	scrolledwindow for TreeView. Added missing labels for empty tabs
	at the moment. Added preferences tab with empty tabs.

2004-04-16  Robin Ericsson  <lobbin@localhost.nu>

	* src/Makefile.am: mud-profile.[ch] added.

	* src/mud-preferences-window.c [MudPreferencesWindowPrivate]:
	Removed gconf_client and added prefs and treeview.
	(mud_preferences_window_init): Save treeview in private data.
	(mud_preferences_window_fill_profiles): Added.